# kubespawner

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SETUP.md  credentials.yaml  dev-requirements.txt  jupyterhub_config.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: publish.yaml  test.yaml
ci/: install-kube.sh  minikube.env
docs/: Makefile  conf.py  environment.yml  index.rst  make.bat  objects.rst  reflector.rst  requirements.txt  spawner.rst  traitlets.rst  utils.rst
docs/source/: changelog.md  changelog.rst  conf.py  events.md  index.md  index.rst  objects.md  objects.rst  overview.md  reflector.md  reflector.rst  spawner.md  spawner.rst  ssl.md  templates.md  traitlets.rst  utils.md  utils.rst
docs/sphinxext/: autodoc_traits.py
kubernetesspawner/: __init__.py  spawner.py  utils.py
kubespawner/: __init__.py  _asyncio_atexit.py  _version.py  api.py  autoport.py  clients.py  events.py  messages.py  multiobjects.py  multireflector.py  multispawner.py  objects.py  profile_spawner.py  proxy.py  proxy.py.77f1f712b536dc5babdaef2435c8ca6b.tmp  reflector.py  slugs.py  spawner.py  traitlets.py  utils.py
kubespawner/templates/: form.html  profile_form_template.html  style.css
scripts/: kubespawner-autoport
sqrekubespawner/: __init__.py  objects.py  spawner.py
tests/: .#test_utils.py  conftest.py  jupyterhub_config.py  test_clients.py  test_events.py  test_multi_namespace_spawner.py  test_objects.py  test_profile.py  test_progress.py  test_reflector.py  test_slugs.py  test_spawner.py  test_utils.py
tests/sample-events/: aws-basic-spawn.events.json  aws-basic-spawn.messages.json  aws-direct-to-node-startup.events.json  aws-direct-to-node-startup.messages.json  aws-node-selector-not-solveable.events.json  aws-node-selector-not-solveable.messages.json  aws-out-of-cpu.events.json  aws-out-of-cpu.messages.json  aws-out-of-memory.events.json  aws-out-of-memory.messages.json  aws-pod-requires-scale-up.events.json  aws-pod-requires-scale-up.messages.json  gcp-basic-spawn.events.json  gcp-basic-spawn.messages.json  gcp-pod-requires-scale-up.events.json  gcp-pod-requires-scale-up.messages.json  invalid-pod-image.events.json  invalid-pod-image.messages.json
v3iok8sspawner/: __init__.py  objects.py  proxy.py  spawner.py
v3iokubespawner/: __init__.py  objects.py  proxy.py  spawner.py
